--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "folktale": "^2.3.2",
     "g": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
@@ -20,6 +21,5 @@
     "react-toastify": "^10.0.4",
     "sequelize": "^6.37.1"
   },
-  "devDependencies": {},
   "description": ""
 }
